# app

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
frontend/: index.js
src/: main.rs
static/: index.html
templates/: index.html.hbs  name.html.hbs
