[package]
name = "app"
version = "0.1.0"
authors = ["Christian Sakai <christianmsakai@gmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
